Font-size now bigger for mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,8 +29,14 @@
               class="nav__menu-icon"
               src="/src/images/Hamburger_icon.svg"
               alt=""
+              title="Open menu"
             />
-            <img class="nav__menu-close" src="/src/images/close.svg" alt="" />
+            <img
+              class="nav__menu-close"
+              src="/src/images/close.svg"
+              alt=""
+              title="Close menu"
+            />
           </label>
         </div>
 
