added comment on CSS

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <img
               class="header__logo"
               src="src/images/logo.png"
-              alt="logo batukeros"
+              alt="logo Weblog"
             />
           </div>
         </div>
-
+        <div class="nav__website-name-mobile">We blog</div>
         <div class="nav__menu-mobile-btn">
           <label class="nav__label" for="nav__check">
             <img
