Hamburger Updated size & added a Label to menu

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
               src="src/images/logo.png"
               alt="logo Weblog"
             />
+            <div class="nav__website-name-mobile">We blog</div>
           </div>
         </div>
-        <div class="nav__website-name-mobile">We blog</div>
         <div class="nav__menu-mobile-btn">
-          <label class="nav__label" for="nav__check">
+          <label class="nav__label" for="nav__check"
+            ><div class="nav__menu-label">Menu</div>
             <img
               class="nav__menu-icon"
               src="/src/images/Hamburger_icon.svg"
