test on : https://validator.w3.org/nu/#textarea ok

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="nav__menu-mobile-btn">
           <label class="nav__label" for="nav__check"
-            ><div class="nav__menu-label">Menu</div>
+            ><span class="nav__menu-label">Menu</span>
             <img
               class="nav__menu-icon"
               src="/src/images/Hamburger_icon.svg"
